--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
                                         <button class="w-20 btn btn-lg btn-primary my-2 " type="submit ">SUBMIT</button>
                                         <p class="mt-5 mb-3 text-muted ">© Since 2021</p>
-                                        <h6>(please press back button instead of return)</h6>
+                                        <h6>(please press back button instead of return after submission )</h6>
                                     </form>
                                 </main>
                                 <br> <br>
