--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <link rel="mask-icon" href="/docs/5.1/assets/img/favicons/safari-pinned-tab.svg" color="#7952b3">
     <link rel="icon" href="/docs/5.1/assets/img/favicons/favicon.ico">
     <meta name="theme-color" content="#7952b3">
+    <script src="index.js"></script>
 
 
     <style>
@@ -208,8 +209,8 @@
                                         </div>
 
                                         <button class="w-20 btn btn-lg btn-primary my-2 " type="submit ">SUBMIT</button>
-                                        <p class="mt-5 mb-3 text-muted ">© Since 2021</p>
-                                        <h6>(please press back button instead of return after submission )</h6>
+                                        
+                                      
                                     </form>
                                 </main>
                                 <br> <br>
@@ -267,7 +268,7 @@
                                 <h4 id="scrollspyHeading5">
                                     <p class="text-center text-info bg-dark fs-1 ">Reviews</h4>
                                 </p>
-                                <div class="card w-200 ">
+                                <div class="card w-200 text-center">
                                     <div class="card-body ">
                                         <h5 class="card-title fs-4 text-primary bg-light ">Please write your reviews...</h5>
                                         <div class="mb-3 ">
@@ -280,6 +281,7 @@
                                 </div>
         </div>
         <br><br>
+           <p class="mt-5 mb-3 text-muted text-center ">© Since 2021</p>
         <footer>
 
 
