--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 
                                         </div>
 
-                                        <button class="w-20 btn btn-lg btn-primary my-2 onclick="markdone(this.parentNode)"" type="submit ">SUBMIT</button>
+                                        <button class="w-20 btn btn-lg btn-primary my-2 onclick="markdone()" type="submit ">SUBMIT</button>
                                         
                                       
                                     </form>
@@ -275,7 +275,7 @@
                                             <form action="https://formcarry.com/s/bmbVCJTAS2U" method="POST" accept-charset="UTF-8">
                                                 <textarea class="form-control " id="exampleFormControlTextarea1" rows="3" name="Review"></textarea>
                                         </div>
-                                        <button class="w-20 btn btn-lg btn-primary my-2 " type="submit " onclick="markdone(this.parentNode)">SUBMIT</button>
+                                        <button class="w-20 btn btn-lg btn-primary my-2 " type="submit " onclick="markdone()">SUBMIT</button>
                                     </div>
                                     </form>
                                 </div>
