--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
         </div>
         <br><br>
            <p class="mt-5 mb-3 text-muted text-center ">© Since 2021</p>
-        <footer>
+        <footer class= "text-center">
 
 
             <h4 id="scrollspyHeading6" class="text-dark text-opacity-50 bg-dark bg-opacity-10">Our social media handles : </h4>
